# big-mad-robot-repo

./: README.md  archive.py  arena.py  behaviours.py  checkpoint.py  containers.py  evaluate  evaluate1  evaluate2  evaluate3  evaluate4  evaluate5  evaluate6  evaluate7  evaluate8  grid.py  local.py  logs.py  params.py  playback  redundancy.py  tests.py  utilities.py
argos3/controllers/footbot_nn/: CBlackBoard.cpp  CBlackBoard.h  CMakeLists.txt  footbot_nn.cpp  footbot_nn.h
argos3/controllers/footbot_nn/nn/: neural_network.cpp  neural_network.h  perceptron_multi.cpp  perceptron_multi.h
argos3/loop_functions/bt_loop_functions/: CMakeLists.txt  bt_loop_functions.cpp  bt_loop_functions.h
argos3/loop_functions/nn_loop_functions/: CMakeLists.txt  nn_loop_functions.cpp  nn_loop_functions.h
charts/: aggregator.py  algorithms.py  analysis.py  best.py  convert.py  evolution-box-plots.py  evolution-line-charts.py  go-away-from-food.py  heatmaps.py  max-fitness-calculator.py  objectives.py  qdscores.py  queries.py  repertoire.py  rotate_grid.py  sub-behaviours.py
cma-es/: analysis.py  archive.py  ea.py  evaluate  evaluate1  evaluate2  evaluate3  evaluate4  evaluate5  evaluate6  evaluate7  evaluate8  main.py  params.py  utilities.py
ga/: archive.py  ea.py  evaluate1  evaluate5  evaluate6  evaluate8  main.py  params.py  qd.py  utilities.py
gp/: ea.py  main.py  qd.py  run
qdpy/: ea.py  main.py  run
repertoires/: combine.py  extrema.py  intersections.py  sub-behaviours-mt1-1000gen.txt  sub-behaviours-mt64-1000gen.txt  sub-behaviours-mt8-1000gen.txt  sub-behaviours.py  (+3 more)
(+56 files in other folders)
